Fix large font size on iOS

--- a/hell/assets/prism.css
+++ b/hell/assets/prism.css
@@ -24,6 +24,9 @@ pre[class*="language-"] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
+
+	display: block;
+	font-size: 1.4rem;
 }
 
 /* Code blocks */
